Fix overlap between 'x' button and content in info panel

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,7 +61,7 @@ main {
     width: max-content;
     max-width: 300px;
     border-radius: 12px;
-    padding: 10px 15px;
+    padding: 25px 15px 10px 15px;
     z-index: 1000;
     display: none;
     /* Hidden by default */
